try from google api it's rendering weird on iOS, so I want to see if it renders correctly when fetched from the google font api

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ https://github.com/morhetz/gruvbox
 html {
   background-color: #fbf1c7;
   text-align: center;
-  font-family: "fira-sans", sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   font-weight: bold;
   font-size: 6vh;
 }
